# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "gallery"
version = "1.9.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
license = "MIT"
publish = false
description = "Slint Widgets Gallery Example"

[[bin]]
path = "main.rs"
name = "gallery"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint.git", features=["gettext"] }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git" }

# Remove the `#wasm#` to uncomment the wasm build.
# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

[lib]
crate-type = ["cdylib"]
path = "main.rs"
#wasm#
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features=["console"] }
console_error_panic_hook = "0.1.5"

[package.metadata.bundle]
identifier = "com.slint.examples.gallery"
